--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
                 </div>
                <div class="container">
                 <form action="">
-                    <input type="text" placeholder="Enter your email">
-                    <button class="btn-primary">
-                        Submit
-                    </button>
+                    <input type="text" placeholder="   Enter your email.....">
+                   
                 </form>
+                <button class="btn">Submit</button>
                </div>
             </div>
         </section>
